fixed issue with modals creating increasing white space on right side of the screen

--- a/frontend/modal.css
+++ b/frontend/modal.css
@@ -1,3 +1,11 @@
 #trigger-modal {
   display: none;
 }
+
+.modal-open {
+  overflow: auto;
+}
+
+.modal-close {
+  overflow: auto;
+}
